k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sim2serve
  labels:
    name: sim2serve
    environment: dev
---
