k8s/06-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: sim2serve
  labels:
    app: user-service
    service: user-service
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: user-service
---
apiVersion: v1
kind: Service
metadata:
  name: tweet-service
  namespace: sim2serve
  labels:
    app: tweet-service
    service: tweet-service
spec:
  type: ClusterIP
  ports:
  - port: 3001
    targetPort: 3001
    protocol: TCP
    name: http
  selector:
    app: tweet-service
---
